// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelHeader should render active flagged posts 1`] = `
<div
  aria-label="channel header region"
  className="channel-header alt a11y__region"
  data-a11y-sort-order="8"
  data-channelid="channel_id"
  id="channel-header"
  role="banner"
  tabIndex="-1"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
        >
          <div>
            <MenuWrapper
              animationComponent={[Function]}
              className=""
              onToggle={[Function]}
            >
              <div
                className="channel-header__top"
                id="channelHeaderDropdownButton"
              >
                <button
                  aria-label="channel menu"
                  className="channel-header__trigger style--none "
                >
                  <strong
                    aria-level="2"
                    className="heading"
                    id="channelHeaderTitle"
                    role="heading"
                  >
                    <span />
                  </strong>
                  <span
                    aria-label="dropdown icon"
                    className="icon icon-chevron-down header-dropdown-chevron-icon"
                    id="channelHeaderDropdownIcon"
                  />
                </button>
              </div>
              <ChannelHeaderDropdown />
            </MenuWrapper>
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              key="isFavorite-undefined"
              onEntering={[Function]}
              overlay={
                <Tooltip
                  bsClass="tooltip"
                  id="favoriteTooltip"
                  placement="right"
                >
                  <FormattedMessage
                    defaultMessage="Add to Favorites"
                    id="channelHeader.addToFavorites"
                  />
                </Tooltip>
              }
              placement="bottom"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <button
                aria-label="add to favorites"
                className="style--none color--link channel-header__favorites inactive"
                id="toggleFavorite"
                onClick={[Function]}
              >
                <i
                  className="icon icon-star-outline"
                />
              </button>
            </OverlayTrigger>
          </div>
        </div>
        <div
          className="channel-header__description light"
          id="channelHeaderDescription"
        >
          <Connect(PopoverListMembers)
            channel={
              Object {
                "delete_at": 0,
                "id": "channel_id",
                "name": "Test",
                "team_id": "team_id",
              }
            }
          />
          <HeaderIconWrapper
            ariaLabel={true}
            buttonClass="channel-header__icon channel-header__icon--wide channel-header__icon--left"
            buttonId="channelHeaderPinButton"
            iconComponent={
              <i
                aria-hidden="true"
                className="icon icon-pin-outline channel-header__pin"
              />
            }
            onClick={[Function]}
            tooltipKey="pinnedPosts"
          />
          <Connect(ChannelPermissionGate)
            channelId="channel_id"
            permissions={
              Array [
                "manage_public_channel_properties",
              ]
            }
            teamId="team_id"
          >
            <button
              className="header-placeholder style--none"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Add a channel description"
                id="channel_header.addChannelHeader"
              />
              <FormattedMessage
                defaultMessage="Edit"
                id="channel_header.editLink"
              >
                <Component />
              </FormattedMessage>
            </button>
          </Connect(ChannelPermissionGate)>
        </div>
      </div>
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "delete_at": 0,
          "id": "channel_id",
          "name": "Test",
          "team_id": "team_id",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon channel-header__icon--active"
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
    <Connect(injectIntl(UserGuideDropdown)) />
  </div>
</div>
`;

exports[`components/ChannelHeader should render active mentions posts 1`] = `
<div
  aria-label="channel header region"
  className="channel-header alt a11y__region"
  data-a11y-sort-order="8"
  data-channelid="channel_id"
  id="channel-header"
  role="banner"
  tabIndex="-1"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
        >
          <div>
            <MenuWrapper
              animationComponent={[Function]}
              className=""
              onToggle={[Function]}
            >
              <div
                className="channel-header__top"
                id="channelHeaderDropdownButton"
              >
                <button
                  aria-label="channel menu"
                  className="channel-header__trigger style--none "
                >
                  <strong
                    aria-level="2"
                    className="heading"
                    id="channelHeaderTitle"
                    role="heading"
                  >
                    <span />
                  </strong>
                  <span
                    aria-label="dropdown icon"
                    className="icon icon-chevron-down header-dropdown-chevron-icon"
                    id="channelHeaderDropdownIcon"
                  />
                </button>
              </div>
              <ChannelHeaderDropdown />
            </MenuWrapper>
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              key="isFavorite-undefined"
              onEntering={[Function]}
              overlay={
                <Tooltip
                  bsClass="tooltip"
                  id="favoriteTooltip"
                  placement="right"
                >
                  <FormattedMessage
                    defaultMessage="Add to Favorites"
                    id="channelHeader.addToFavorites"
                  />
                </Tooltip>
              }
              placement="bottom"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <button
                aria-label="add to favorites"
                className="style--none color--link channel-header__favorites inactive"
                id="toggleFavorite"
                onClick={[Function]}
              >
                <i
                  className="icon icon-star-outline"
                />
              </button>
            </OverlayTrigger>
          </div>
        </div>
        <div
          className="channel-header__description light"
          id="channelHeaderDescription"
        >
          <Connect(PopoverListMembers)
            channel={
              Object {
                "delete_at": 0,
                "id": "channel_id",
                "name": "Test",
                "team_id": "team_id",
              }
            }
          />
          <HeaderIconWrapper
            ariaLabel={true}
            buttonClass="channel-header__icon channel-header__icon--wide channel-header__icon--left"
            buttonId="channelHeaderPinButton"
            iconComponent={
              <i
                aria-hidden="true"
                className="icon icon-pin-outline channel-header__pin"
              />
            }
            onClick={[Function]}
            tooltipKey="pinnedPosts"
          />
          <Connect(ChannelPermissionGate)
            channelId="channel_id"
            permissions={
              Array [
                "manage_public_channel_properties",
              ]
            }
            teamId="team_id"
          >
            <button
              className="header-placeholder style--none"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Add a channel description"
                id="channel_header.addChannelHeader"
              />
              <FormattedMessage
                defaultMessage="Edit"
                id="channel_header.editLink"
              >
                <Component />
              </FormattedMessage>
            </button>
          </Connect(ChannelPermissionGate)>
        </div>
      </div>
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "delete_at": 0,
          "id": "channel_id",
          "name": "Test",
          "team_id": "team_id",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon channel-header__icon--active"
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
    <Connect(injectIntl(UserGuideDropdown)) />
  </div>
</div>
`;

exports[`components/ChannelHeader should render active pinned posts 1`] = `
<div
  aria-label="channel header region"
  className="channel-header alt a11y__region"
  data-a11y-sort-order="8"
  data-channelid="channel_id"
  id="channel-header"
  role="banner"
  tabIndex="-1"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
        >
          <div>
            <MenuWrapper
              animationComponent={[Function]}
              className=""
              onToggle={[Function]}
            >
              <div
                className="channel-header__top"
                id="channelHeaderDropdownButton"
              >
                <button
                  aria-label="channel menu"
                  className="channel-header__trigger style--none "
                >
                  <strong
                    aria-level="2"
                    className="heading"
                    id="channelHeaderTitle"
                    role="heading"
                  >
                    <span />
                  </strong>
                  <span
                    aria-label="dropdown icon"
                    className="icon icon-chevron-down header-dropdown-chevron-icon"
                    id="channelHeaderDropdownIcon"
                  />
                </button>
              </div>
              <ChannelHeaderDropdown />
            </MenuWrapper>
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              key="isFavorite-undefined"
              onEntering={[Function]}
              overlay={
                <Tooltip
                  bsClass="tooltip"
                  id="favoriteTooltip"
                  placement="right"
                >
                  <FormattedMessage
                    defaultMessage="Add to Favorites"
                    id="channelHeader.addToFavorites"
                  />
                </Tooltip>
              }
              placement="bottom"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <button
                aria-label="add to favorites"
                className="style--none color--link channel-header__favorites inactive"
                id="toggleFavorite"
                onClick={[Function]}
              >
                <i
                  className="icon icon-star-outline"
                />
              </button>
            </OverlayTrigger>
          </div>
        </div>
        <div
          className="channel-header__description light"
          id="channelHeaderDescription"
        >
          <Connect(PopoverListMembers)
            channel={
              Object {
                "delete_at": 0,
                "id": "channel_id",
                "name": "Test",
                "team_id": "team_id",
              }
            }
          />
          <HeaderIconWrapper
            ariaLabel={true}
            buttonClass="channel-header__icon channel-header__icon--wide channel-header__icon--left channel-header__icon--active"
            buttonId="channelHeaderPinButton"
            iconComponent={
              <i
                aria-hidden="true"
                className="icon icon-pin-outline channel-header__pin"
              />
            }
            onClick={[Function]}
            tooltipKey="pinnedPosts"
          />
          <Connect(ChannelPermissionGate)
            channelId="channel_id"
            permissions={
              Array [
                "manage_public_channel_properties",
              ]
            }
            teamId="team_id"
          >
            <button
              className="header-placeholder style--none"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Add a channel description"
                id="channel_header.addChannelHeader"
              />
              <FormattedMessage
                defaultMessage="Edit"
                id="channel_header.editLink"
              >
                <Component />
              </FormattedMessage>
            </button>
          </Connect(ChannelPermissionGate)>
        </div>
      </div>
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "delete_at": 0,
          "id": "channel_id",
          "name": "Test",
          "team_id": "team_id",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
    <Connect(injectIntl(UserGuideDropdown)) />
  </div>
</div>
`;

exports[`components/ChannelHeader should render archived view 1`] = `
<div
  aria-label="channel header region"
  className="channel-header alt a11y__region"
  data-a11y-sort-order="8"
  data-channelid="channel_id"
  id="channel-header"
  role="banner"
  tabIndex="-1"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
        >
          <div>
            <MenuWrapper
              animationComponent={[Function]}
              className=""
              onToggle={[Function]}
            >
              <div
                className="channel-header__top"
                id="channelHeaderDropdownButton"
              >
                <button
                  aria-label="channel menu"
                  className="channel-header__trigger style--none "
                >
                  <strong
                    aria-level="2"
                    className="heading"
                    id="channelHeaderTitle"
                    role="heading"
                  >
                    <span>
                      <ArchiveIcon
                        className="icon icon__archive icon channel-header-archived-icon svg-text-color"
                      />
                    </span>
                  </strong>
                  <span
                    aria-label="dropdown icon"
                    className="icon icon-chevron-down header-dropdown-chevron-icon"
                    id="channelHeaderDropdownIcon"
                  />
                </button>
              </div>
              <ChannelHeaderDropdown />
            </MenuWrapper>
          </div>
        </div>
        <div
          className="channel-header__description light"
          id="channelHeaderDescription"
        >
          <Connect(PopoverListMembers)
            channel={
              Object {
                "delete_at": 1234,
                "id": "channel_id",
                "name": "Test",
                "team_id": "team_id",
              }
            }
          />
          <HeaderIconWrapper
            ariaLabel={true}
            buttonClass="channel-header__icon channel-header__icon--wide channel-header__icon--left"
            buttonId="channelHeaderPinButton"
            iconComponent={
              <i
                aria-hidden="true"
                className="icon icon-pin-outline channel-header__pin"
              />
            }
            onClick={[Function]}
            tooltipKey="pinnedPosts"
          />
        </div>
      </div>
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "delete_at": 1234,
          "id": "channel_id",
          "name": "Test",
          "team_id": "team_id",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
    <Connect(injectIntl(UserGuideDropdown)) />
  </div>
</div>
`;

exports[`components/ChannelHeader should render correct menu when muted 1`] = `
<div
  aria-label="channel header region"
  className="channel-header alt a11y__region"
  data-a11y-sort-order="8"
  data-channelid="channel_id"
  id="channel-header"
  role="banner"
  tabIndex="-1"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
        >
          <div>
            <MenuWrapper
              animationComponent={[Function]}
              className=""
              onToggle={[Function]}
            >
              <div
                className="channel-header__top"
                id="channelHeaderDropdownButton"
              >
                <button
                  aria-label="channel menu"
                  className="channel-header__trigger style--none "
                >
                  <strong
                    aria-level="2"
                    className="heading"
                    id="channelHeaderTitle"
                    role="heading"
                  >
                    <span />
                  </strong>
                  <span
                    aria-label="dropdown icon"
                    className="icon icon-chevron-down header-dropdown-chevron-icon"
                    id="channelHeaderDropdownIcon"
                  />
                </button>
              </div>
              <ChannelHeaderDropdown />
            </MenuWrapper>
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              key="isFavorite-undefined"
              onEntering={[Function]}
              overlay={
                <Tooltip
                  bsClass="tooltip"
                  id="favoriteTooltip"
                  placement="right"
                >
                  <FormattedMessage
                    defaultMessage="Add to Favorites"
                    id="channelHeader.addToFavorites"
                  />
                </Tooltip>
              }
              placement="bottom"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <button
                aria-label="add to favorites"
                className="style--none color--link channel-header__favorites inactive"
                id="toggleFavorite"
                onClick={[Function]}
              >
                <i
                  className="icon icon-star-outline"
                />
              </button>
            </OverlayTrigger>
          </div>
          <OverlayTrigger
            defaultOverlayShown={false}
            delayShow={400}
            overlay={
              <Tooltip
                bsClass="tooltip"
                id="channelMutedTooltip"
                placement="right"
              >
                <FormattedMessage
                  defaultMessage="Unmute"
                  id="channelHeader.unmute"
                />
              </Tooltip>
            }
            placement="bottom"
            trigger={
              Array [
                "hover",
                "focus",
              ]
            }
          >
            <button
              aria-label="Muted Icon"
              className="style--none color--link channel-header__mute inactive"
              id="toggleMute"
              onClick={[Function]}
            >
              <i
                className="icon icon-bell-off-outline"
              />
            </button>
          </OverlayTrigger>
        </div>
        <div
          className="channel-header__description light"
          id="channelHeaderDescription"
        >
          <Connect(PopoverListMembers)
            channel={
              Object {
                "delete_at": 0,
                "id": "channel_id",
                "name": "Test",
                "team_id": "team_id",
              }
            }
          />
          <HeaderIconWrapper
            ariaLabel={true}
            buttonClass="channel-header__icon channel-header__icon--wide channel-header__icon--left"
            buttonId="channelHeaderPinButton"
            iconComponent={
              <i
                aria-hidden="true"
                className="icon icon-pin-outline channel-header__pin"
              />
            }
            onClick={[Function]}
            tooltipKey="pinnedPosts"
          />
          <Connect(ChannelPermissionGate)
            channelId="channel_id"
            permissions={
              Array [
                "manage_public_channel_properties",
              ]
            }
            teamId="team_id"
          >
            <button
              className="header-placeholder style--none"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Add a channel description"
                id="channel_header.addChannelHeader"
              />
              <FormattedMessage
                defaultMessage="Edit"
                id="channel_header.editLink"
              >
                <Component />
              </FormattedMessage>
            </button>
          </Connect(ChannelPermissionGate)>
        </div>
      </div>
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "delete_at": 0,
          "id": "channel_id",
          "name": "Test",
          "team_id": "team_id",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
    <Connect(injectIntl(UserGuideDropdown)) />
  </div>
</div>
`;

exports[`components/ChannelHeader should render properly when custom status is set 1`] = `
<div
  aria-label="channel header region"
  className="channel-header alt a11y__region"
  data-a11y-sort-order="8"
  data-channelid="undefined"
  id="channel-header"
  role="banner"
  tabIndex="-1"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
        >
          <div>
            <MenuWrapper
              animationComponent={[Function]}
              className=""
              onToggle={[Function]}
            >
              <div
                className="channel-header__top"
                id="channelHeaderDropdownButton"
              >
                <button
                  aria-label="channel menu"
                  className="channel-header__trigger style--none "
                >
                  <strong
                    aria-level="2"
                    className="heading"
                    id="channelHeaderTitle"
                    role="heading"
                  >
                    <span>
                      <ArchiveIcon
                        className="icon icon__archive icon channel-header-archived-icon svg-text-color"
                      />
                      <FormattedMessage
                        defaultMessage="{displayname} (you) "
                        id="channel_header.directchannel.you"
                        values={
                          Object {
                            "displayname": undefined,
                          }
                        }
                      />
                      <GuestBadge
                        className=""
                        show={false}
                      />
                    </span>
                  </strong>
                  <span
                    aria-label="dropdown icon"
                    className="icon icon-chevron-down header-dropdown-chevron-icon"
                    id="channelHeaderDropdownIcon"
                  />
                </button>
              </div>
              <ChannelHeaderDropdown />
            </MenuWrapper>
          </div>
        </div>
        <div
          className="channel-header__description"
          dir="auto"
          id="channelHeaderDescription"
        >
          <StatusIcon
            button={false}
            className=""
            status="offline"
          />
          <span
            className="header-status__text"
          >
            <FormattedMessage
              defaultMessage="Offline"
              id="status_dropdown.set_offline"
            />
            <CustomStatusEmoji
              emojiSize={15}
              emojiStyle={
                Object {
                  "margin": "0 4px 1px",
                  "verticalAlign": "top",
                }
              }
              showTooltip={false}
              spanStyle={Object {}}
              tooltipDirection="top"
              userID="user_id"
            />
            <CustomStatusText
              className=""
              text="In a meeting"
              tooltipDirection="bottom"
            />
          </span>
          <HeaderIconWrapper
            ariaLabel={true}
            buttonClass="channel-header__icon channel-header__icon--wide channel-header__icon--left"
            buttonId="channelHeaderPinButton"
            iconComponent={
              <i
                aria-hidden="true"
                className="icon icon-pin-outline channel-header__pin"
              />
            }
            onClick={[Function]}
            tooltipKey="pinnedPosts"
          />
          <div
            className="header-popover-text-measurer"
          >
            <Connect(Markdown)
              message="not the bot description"
              options={
                Object {
                  "atMentions": true,
                  "channelNamesMap": undefined,
                  "mentionHighlight": false,
                  "singleline": true,
                }
              }
            />
          </div>
          <span
            className="header-description__text"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <Overlay
              animation={[Function]}
              onEnter={[Function]}
              onHide={[Function]}
              placement="bottom"
              rootClose={true}
              show={false}
              target={null}
            >
              <Popover
                className="channel-header__popover chanel-header__popover--new_sidebar"
                id="header-popover"
                placement="bottom"
                popoverSize="lg"
                popoverStyle="info"
                style={
                  Object {
                    "maxWidth": "0px",
                    "transform": "translate(0px, 0px)",
                  }
                }
              >
                <span
                  onClick={[Function]}
                >
                  <Connect(Markdown)
                    message="not the bot description"
                    options={
                      Object {
                        "atMentions": true,
                        "channelNamesMap": undefined,
                        "mentionHighlight": false,
                        "singleline": false,
                      }
                    }
                  />
                </span>
              </Popover>
            </Overlay>
            <Connect(Markdown)
              message="not the bot description"
              options={
                Object {
                  "atMentions": true,
                  "channelNamesMap": undefined,
                  "mentionHighlight": false,
                  "singleline": true,
                }
              }
            />
          </span>
        </div>
      </div>
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "header": "not the bot description",
          "status": "offline",
          "type": "D",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
    <Connect(injectIntl(UserGuideDropdown)) />
  </div>
</div>
`;

exports[`components/ChannelHeader should render properly when empty 1`] = `
<div
  className="channel-header"
/>
`;

exports[`components/ChannelHeader should render properly when populated 1`] = `
<div
  aria-label="channel header region"
  className="channel-header alt a11y__region"
  data-a11y-sort-order="8"
  data-channelid="channel_id"
  id="channel-header"
  role="banner"
  tabIndex="-1"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
        >
          <div>
            <MenuWrapper
              animationComponent={[Function]}
              className=""
              onToggle={[Function]}
            >
              <div
                className="channel-header__top"
                id="channelHeaderDropdownButton"
              >
                <button
                  aria-label="channel menu"
                  className="channel-header__trigger style--none "
                >
                  <strong
                    aria-level="2"
                    className="heading"
                    id="channelHeaderTitle"
                    role="heading"
                  >
                    <span />
                  </strong>
                  <span
                    aria-label="dropdown icon"
                    className="icon icon-chevron-down header-dropdown-chevron-icon"
                    id="channelHeaderDropdownIcon"
                  />
                </button>
              </div>
              <ChannelHeaderDropdown />
            </MenuWrapper>
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              key="isFavorite-undefined"
              onEntering={[Function]}
              overlay={
                <Tooltip
                  bsClass="tooltip"
                  id="favoriteTooltip"
                  placement="right"
                >
                  <FormattedMessage
                    defaultMessage="Add to Favorites"
                    id="channelHeader.addToFavorites"
                  />
                </Tooltip>
              }
              placement="bottom"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <button
                aria-label="add to favorites"
                className="style--none color--link channel-header__favorites inactive"
                id="toggleFavorite"
                onClick={[Function]}
              >
                <i
                  className="icon icon-star-outline"
                />
              </button>
            </OverlayTrigger>
          </div>
        </div>
        <div
          className="channel-header__description light"
          id="channelHeaderDescription"
        >
          <Connect(PopoverListMembers)
            channel={
              Object {
                "delete_at": 0,
                "id": "channel_id",
                "name": "Test",
                "team_id": "team_id",
              }
            }
          />
          <HeaderIconWrapper
            ariaLabel={true}
            buttonClass="channel-header__icon channel-header__icon--wide channel-header__icon--left"
            buttonId="channelHeaderPinButton"
            iconComponent={
              <i
                aria-hidden="true"
                className="icon icon-pin-outline channel-header__pin"
              />
            }
            onClick={[Function]}
            tooltipKey="pinnedPosts"
          />
          <Connect(ChannelPermissionGate)
            channelId="channel_id"
            permissions={
              Array [
                "manage_public_channel_properties",
              ]
            }
            teamId="team_id"
          >
            <button
              className="header-placeholder style--none"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Add a channel description"
                id="channel_header.addChannelHeader"
              />
              <FormattedMessage
                defaultMessage="Edit"
                id="channel_header.editLink"
              >
                <Component />
              </FormattedMessage>
            </button>
          </Connect(ChannelPermissionGate)>
        </div>
      </div>
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "delete_at": 0,
          "id": "channel_id",
          "name": "Test",
          "team_id": "team_id",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
    <Connect(injectIntl(UserGuideDropdown)) />
  </div>
</div>
`;

exports[`components/ChannelHeader should render properly when populated with channel props 1`] = `
<div
  aria-label="channel header region"
  className="channel-header alt a11y__region"
  data-a11y-sort-order="8"
  data-channelid="channel_id"
  id="channel-header"
  role="banner"
  tabIndex="-1"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
        >
          <div>
            <MenuWrapper
              animationComponent={[Function]}
              className=""
              onToggle={[Function]}
            >
              <div
                className="channel-header__top"
                id="channelHeaderDropdownButton"
              >
                <button
                  aria-label="channel menu"
                  className="channel-header__trigger style--none "
                >
                  <strong
                    aria-level="2"
                    className="heading"
                    id="channelHeaderTitle"
                    role="heading"
                  >
                    <span>
                      <ArchiveIcon
                        className="icon icon__archive icon channel-header-archived-icon svg-text-color"
                      />
                    </span>
                  </strong>
                  <span
                    aria-label="dropdown icon"
                    className="icon icon-chevron-down header-dropdown-chevron-icon"
                    id="channelHeaderDropdownIcon"
                  />
                </button>
              </div>
              <ChannelHeaderDropdown />
            </MenuWrapper>
          </div>
        </div>
        <div
          className="channel-header__description"
          dir="auto"
          id="channelHeaderDescription"
        >
          <Connect(PopoverListMembers)
            channel={
              Object {
                "header": "See ~test",
                "id": "channel_id",
                "name": "Test",
                "props": Object {
                  "channel_mentions": Object {
                    "test": Object {
                      "display_name": "Test",
                    },
                  },
                },
                "team_id": "team_id",
              }
            }
          />
          <HeaderIconWrapper
            ariaLabel={true}
            buttonClass="channel-header__icon channel-header__icon--wide channel-header__icon--left"
            buttonId="channelHeaderPinButton"
            iconComponent={
              <i
                aria-hidden="true"
                className="icon icon-pin-outline channel-header__pin"
              />
            }
            onClick={[Function]}
            tooltipKey="pinnedPosts"
          />
          <div
            className="header-popover-text-measurer"
          >
            <Connect(Markdown)
              message="See ~test"
              options={
                Object {
                  "atMentions": true,
                  "channelNamesMap": Object {
                    "test": Object {
                      "display_name": "Test",
                    },
                  },
                  "mentionHighlight": false,
                  "singleline": true,
                }
              }
            />
          </div>
          <span
            className="header-description__text"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <Overlay
              animation={[Function]}
              onEnter={[Function]}
              onHide={[Function]}
              placement="bottom"
              rootClose={true}
              show={false}
              target={null}
            >
              <Popover
                className="channel-header__popover chanel-header__popover--new_sidebar"
                id="header-popover"
                placement="bottom"
                popoverSize="lg"
                popoverStyle="info"
                style={
                  Object {
                    "maxWidth": "0px",
                    "transform": "translate(0px, 0px)",
                  }
                }
              >
                <span
                  onClick={[Function]}
                >
                  <Connect(Markdown)
                    message="See ~test"
                    options={
                      Object {
                        "atMentions": true,
                        "channelNamesMap": Object {
                          "test": Object {
                            "display_name": "Test",
                          },
                        },
                        "mentionHighlight": false,
                        "singleline": false,
                      }
                    }
                  />
                </span>
              </Popover>
            </Overlay>
            <Connect(Markdown)
              message="See ~test"
              options={
                Object {
                  "atMentions": true,
                  "channelNamesMap": Object {
                    "test": Object {
                      "display_name": "Test",
                    },
                  },
                  "mentionHighlight": false,
                  "singleline": true,
                }
              }
            />
          </span>
        </div>
      </div>
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "header": "See ~test",
          "id": "channel_id",
          "name": "Test",
          "props": Object {
            "channel_mentions": Object {
              "test": Object {
                "display_name": "Test",
              },
            },
          },
          "team_id": "team_id",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
    <Connect(injectIntl(UserGuideDropdown)) />
  </div>
</div>
`;

exports[`components/ChannelHeader should render the pinned icon with the pinned posts count 1`] = `
<div
  aria-label="channel header region"
  className="channel-header alt a11y__region"
  data-a11y-sort-order="8"
  data-channelid="channel_id"
  id="channel-header"
  role="banner"
  tabIndex="-1"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
        >
          <div>
            <MenuWrapper
              animationComponent={[Function]}
              className=""
              onToggle={[Function]}
            >
              <div
                className="channel-header__top"
                id="channelHeaderDropdownButton"
              >
                <button
                  aria-label="channel menu"
                  className="channel-header__trigger style--none "
                >
                  <strong
                    aria-level="2"
                    className="heading"
                    id="channelHeaderTitle"
                    role="heading"
                  >
                    <span />
                  </strong>
                  <span
                    aria-label="dropdown icon"
                    className="icon icon-chevron-down header-dropdown-chevron-icon"
                    id="channelHeaderDropdownIcon"
                  />
                </button>
              </div>
              <ChannelHeaderDropdown />
            </MenuWrapper>
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              key="isFavorite-undefined"
              onEntering={[Function]}
              overlay={
                <Tooltip
                  bsClass="tooltip"
                  id="favoriteTooltip"
                  placement="right"
                >
                  <FormattedMessage
                    defaultMessage="Add to Favorites"
                    id="channelHeader.addToFavorites"
                  />
                </Tooltip>
              }
              placement="bottom"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <button
                aria-label="add to favorites"
                className="style--none color--link channel-header__favorites inactive"
                id="toggleFavorite"
                onClick={[Function]}
              >
                <i
                  className="icon icon-star-outline"
                />
              </button>
            </OverlayTrigger>
          </div>
        </div>
        <div
          className="channel-header__description light"
          id="channelHeaderDescription"
        >
          <Connect(PopoverListMembers)
            channel={
              Object {
                "delete_at": 0,
                "id": "channel_id",
                "name": "Test",
                "team_id": "team_id",
              }
            }
          />
          <HeaderIconWrapper
            ariaLabel={true}
            buttonClass="channel-header__icon channel-header__icon--wide channel-header__icon--left"
            buttonId="channelHeaderPinButton"
            iconComponent={
              <React.Fragment>
                <i
                  aria-hidden="true"
                  className="icon icon-pin-outline channel-header__pin"
                />
                <span
                  className="icon__text"
                  id="channelPinnedPostCountText"
                >
                  2
                </span>
              </React.Fragment>
            }
            onClick={[Function]}
            tooltipKey="pinnedPosts"
          />
          <Connect(ChannelPermissionGate)
            channelId="channel_id"
            permissions={
              Array [
                "manage_public_channel_properties",
              ]
            }
            teamId="team_id"
          >
            <button
              className="header-placeholder style--none"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Add a channel description"
                id="channel_header.addChannelHeader"
              />
              <FormattedMessage
                defaultMessage="Edit"
                id="channel_header.editLink"
              >
                <Component />
              </FormattedMessage>
            </button>
          </Connect(ChannelPermissionGate)>
        </div>
      </div>
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "delete_at": 0,
          "id": "channel_id",
          "name": "Test",
          "team_id": "team_id",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon--standard"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      ariaLabel={true}
      buttonClass="channel-header__icon"
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
    <Connect(injectIntl(UserGuideDropdown)) />
  </div>
</div>
`;
